2003-05-22  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: Add preliminary test for closing \] and \).
	
2003-05-21  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/gregorian-ligature-engraver.cc,
	lily/vaticana-ligature-engraver.cc,
	lily/include/gregorian-ligature.hh, ly/gregorian-init.ly,
	mf/parmesan-heads.mf: various semivocalis related bugfixes

	* input/bugs/ligatures.ly: new file demonstrating problems with
	ligatures
	
2003-05-21  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el,
	lilypond-font-lock.el,
	lilypond-indent.el: Move all paren matching to lilypond-indent.el.

2003-05-20  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Remove outdated code. Stress the difference 
	between	Emacs and XEmacs definitions.

	* lilypond-mode.el,
	lilypond-indent.el: Define a function interactive only when necessary.

2003-05-19  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Use temp-dir for Commands on Buffer/Region.
	Use inactive regions also in XEmacs.

2003-05-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Repeat syntax): more updates

	* lily/simple-spacer.cc (solve): move solution process into
	solve(). This fixes a bug with collisions and raggedright = ##t.
 
	* scm/lily.scm (scm): remove output-pysk.scm, music-types.scm

	* ly/engraver-init.ly: remove GraceContext. Update examples.

2003-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (fonts): Also make fontball.

	* Website fixes:

	* ly/engraver-init.ly (GraceContext): Add.

	* run:

	    convert-ly $(find . -name *.ly)

	* ly/chord-modifiers-init.ly (ignatzekExceptionMusic): Hmm: fix
	new chords.

2003-05-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.7.19 released
	
	* scm/music-functions.scm (set-octavation): new function.

	* input/regression/ottava.ly: new file

	* lily/translator-scheme.cc (LY_DEFINE): new function
	ly:unset-context-property
	(LY_DEFINE) new function ly:context-property-where-defined: 
