@@ -168,6 +168,7 @@ VoiceContext = \translator {
 	\consists "New_fingering_engraver"
 	\consists "Chord_tremolo_engraver"
 	\consists "Percent_repeat_engraver"
+	\consists "Slash_repeat_engraver"
 	\consists "Melisma_engraver"
 
 %{
